Refactor map provider methods for improved naming and type handling; update zoom logic in MapField and related classes